src/app/ad-infos/ad-infos.component.css
main{
    background-image: url('../../assets/bg-category.png'); 
    margin-top: -50px;
 
}
 
 
 dis
 

  
.imgSlide{   
  height: 100px; 
  display: block!important;

}
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 5; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
  }
  
  /* Modal Content (image) */
  .modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    height: 80%;
    max-height: auto;
    background-color: red;
  }
  .next { 
    color: white;
  }
  
  .round { 
    cursor: pointer;
    font-size: 5em;  
    padding-left: 1%;
    padding-right: 1%;
    color: #EBE6E4; 
    text-decoration: none;
    transition: 300ms; 
    -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
  }
  .round:hover{
    color: #1f1f1f;
  }
  /* Caption of Modal Image */
   
  
  /* Add Animation */
  .modal-content, #caption {  
    -webkit-animation-name: zoom;
    -webkit-animation-duration: 0.6s;
    animation-name: zoom;
    animation-duration: 0.6s;
  }
  
  @-webkit-keyframes zoom {
    from {-webkit-transform:scale(0)} 
    to {-webkit-transform:scale(1)}
  }
  
  @keyframes zoom {
    from {transform:scale(0)} 
    to {transform:scale(1)}
  }
  
  /* The Close Button */
  .close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
  }
  
  .close:hover,
  .close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
  }

  
  /* 100% Image Width on Smaller Screens */
 

  @media only screen and (max-width: 700px){
    .modal-content {
      width: 100%;
    }
    
  }

  .carousel {
    height: 400px;
    width: 50vh; 
    display: block;
    overflow: hidden;  
  }
  
  .carousel-item { 
    display: grid;
    grid-area: gallery;
    height: 400px;
    width: 100%;
    position: relative;
    top: 0;
    left: 0;  
    overflow: hidden;
  }
  
  .carousel-item img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: center;
  } 
   
  
  @media only screen and (max-width: 450px){
    .modal-content {
      width: 100%;
    }
     
  }

  *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Playfair Display", serif;
  }
  
  a {
    text-decoration: none;
  }
  
  .container {
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }
  
  .decor {
    width: 100%;
    height: auto;
  }
  
  .ad-info-wrapper {
    display: grid;
    grid-template-areas:
      "gallery info room-str"
      "gallery des des";
  }
  
  .info {
    grid-area: info;
    margin: 20px;
    text-align: center;
  }
  
  .room-structure {
    grid-area: room-str;
    margin: 20px;
  }
  
  .description {
    grid-area: des; 
    margin: 20px;
  }
  .longDescription{
    grid-area: unset;
    width: 180%;
  }
  
  .decor {
    margin-top: 45px;
    margin-bottom: 45px;
  }
  .onlyMobile{
    display: contents;
    margin: auto;
    margin-left: 5%;
  }
  .squarefeet {
    padding: 8px 40px;
    font-size: 25px;
    font-family: sans-serif;
    background-color: #231f20;
    color: white;
    max-width: 180px;
    margin-left: auto;
    margin-right: auto;
  }
  
  .address {
    margin-top: 30px;
    margin-bottom: 30px;
    font-weight: 500;
    font-size: 1.6rem;
  }
  
  .socials {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 30px;
  }
  
  .socials a {
    margin-right: 20px;
  }
  
  .number-of-rooms {
    margin-bottom: 30px;
    padding: 10px;
    font-weight: 700;
    font-size: 17px;
    letter-spacing: 1px;
    border: 2px solid #cb8b53;
    text-align: center;
    max-width: 90%;
    margin-left: auto;
    margin-right: auto;
  }
  
  .floor {
    font-size: 20px;
    font-weight: 700;
  }
  
  .cell {
    text-align: center;
    padding: 15px 35px;
  }
  
  .t-heading {
    background-color: #cd8b53;
  }
  
  .row-lighter {
    font-weight: 700;
    letter-spacing: 1px;
    background-color: rgba(104, 104, 104, 30%);
  }
  
  .row-darker {
    letter-spacing: 1px;
    font-weight: 700;
    background-color: rgba(35, 31, 32, 40%);
  }
  
  table {
    border-spacing: 7px;
  }
  
  .des-h {
    font-size: 25px;
  
    margin-bottom: 20px;
  }
  
  .description-text {
    font-size: 18px;
    letter-spacing: 1px;
  }
  
  .description {
    margin-bottom: 40px;
  }
  
  .info-text {
    font-size: 25px;
    font-weight: 500;
    margin-bottom: 20px;
  }
  
  .social-cont {
    margin-right: 7%;
  }
  
  .informations div {
    margin-bottom: 90px;
  }
  
  .info {
    margin-left: 7%;
  }
  
  .info-h {
    font-size: 25px;
    letter-spacing: 1px;
    color: #a65f23;
    margin-bottom: 30px;
  }
  
  .contact-infos-wrapper {
    display: flex;
    justify-content: space-between;
    margin-top: 100px;
    flex-wrap: wrap;
    padding: 10px;
  }
  
  .contact-infos-wrapper div {
    margin: 10px;
  }
  
  .co-h {
    margin-top: 100px;
    font-size: 45px;
    text-align: center;
  }
  
  .look-all {
    text-align: center;
    margin-top: 150px;
    margin-bottom: 200px;
    position: relative;
  }
  
  .right-back {
    position: absolute;
    top: 10%;
    right: 0;
  }
  
  .left-back {
    position: absolute;
    top: 10%;
    left: 0;
  }
  
  .look-all-heading {
    font-size: 45px;
    font-weight: 600;
    margin-bottom: 50px;
  }
  
  .action-btn {
    font-weight: 700;
    font-size: 20px;
  }
  
  .text-below {
    margin-top: 50px;
  }
  
  .action-btn {
    width: 400px;
    max-height: 50px;
    padding: 13px 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #d9a575;
    border: none;
    color: black;
    font-family: "Playfair Display", serif;
    transition: 0.2s;
    margin-left: auto;
    margin-right: auto;
  }
  
  .action-btn:hover {
    width: 480px;
    background-color: #cd8b53;
  }
  
  @media only screen and (max-width: 300px) {
    .action-btn {
      width: 80%;
      font-size: 12px;
    }
    .action-btn:hover {
      width: 90%;
    }
  }
  
  @media only screen and (max-width: 1800px) {
    .number-of-rooms {
      font-size: 1vw;
    }
  }
  
  @media only screen and (max-width: 1200px) {
    .left-back {
      height: 200px;
      width: 250px;
      top: 20%;
    }
    .gallery{
      margin-left: 5%;
    }
    .right-back {
      height: 200px;
      width: 250px;
      top: 20%;
    }
  }
  
  @media only screen and (max-width: 1100px) {
    .ad-info-wrapper {
      grid-template-areas:
        "gallery info"
        "gallery room-str"
        "des des";
    }
    .description{
      grid-area: unset;
      margin-top: 5%;
    }
    .longDescription{
      width: 100%;
    }
  
    .number-of-rooms {
      font-size: 13px;
      display: flex;
      justify-content: center;
      max-width: 50%;
      word-wrap: break-word;
      flex-wrap: wrap;
    }

    .left-back,
    .right-back {
      height: 150px;
      width: 200px;
      top: 30%;
    }
  }
  
  @media only screen and (max-width: 950px) {
    .contact-infos-wrapper {
      justify-content: center;
    }
  
    .contact-infos-wrapper div {
      margin: 25px;
    }
  }
  
  @media only screen and (max-width: 900px) {
    .ad-info-wrapper {
      grid-template-areas:
        "gallery gallery"
        "info info"
        "des  ";
    }
    .ad-info-wrapper {
      display: inline-block;
      width: 100%;
    }
    .onlyMobile{
      display: flex;
      margin: auto;
      margin-left: 5%;
    }
    .description-text{
      font-size: 16px;
      width: 100%!important;
    }
    .gallery {
      margin-left: auto;
      margin-right: auto;
      text-align: center;
      width: 100%;
      height: auto;
    }
    .left-back,
    .right-back {
      display: none;
    }
  
     
  
    .number-of-rooms {
      font-size: 1.5vw;
      max-width: 250px;
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
    }
  }
  
  @media only screen and (max-width: 670px) {
    .co-h {
      font-size: 35px;
    }
  }
  
  @media only screen and (max-width: 550px) {
    .ad-info-wrapper {
      display: block;
    }
    .onlyMobile{
      display: block;
    }
    .gallery {
      margin-left: auto;
      margin-right: auto;
      text-align: center;
  margin: auto;
  width: 60%;
  text-align: center;
      height: auto;
      font-size: 2em;
    }
  
    .gallery img { 
      display: block;
      width: 100%;
      max-width: 500px;
      height: auto;
    }
  
    .room-structure {
      margin-top: 50px;
      margin-bottom: 50px;
    }
  
    .number-of-rooms {
      font-size: 15px;
    }
  
    .co-h {
      font-size: 25px;
    }
  }
  
  @media only screen and (max-width: 400px) {
    .action-btn {
      width: 80%;
      font-size: 12px;
    }
    .action-btn:hover {
      width: 90%;
    }
  
    .look-all-heading {
      font-size: 25px;
    }
  }
  
  @media only screen and (max-width: 350px) {
    .room-structure {
      margin-left: 0px;
    }
  }
  
  @media only screen and (max-width: 350px) {
    .cell {
      text-align: center;
      padding: 10px 20px;
      font-size: small;
    }
  
    .t-heading {
      background-color: #cd8b53;
    }
  
    .row-lighter {
      font-weight: 700;
      letter-spacing: 1px;
      background-color: rgba(104, 104, 104, 30%);
    }
  
    .row-darker {
      letter-spacing: 1px;
      font-weight: 700;
      background-color: rgba(35, 31, 32, 40%);
    }
  
    table {
      border-spacing: 7px;
    }
  }
  
  @media only screen and (max-width: 300px) {
    .co-h {
      margin-top: 40px;
    }
  
    .contact-infos-wrapper {
      margin-top: 30px;
    }
  }
  
  @media only screen and (max-width: 270px) {
    .info-h {
      font-size: 17px;
    }
  
    .info-text {
      font-size: 18px;
    }
  
    .social-cont img {
      width: 32px;
    }
  }
  
  @media only screen and (max-width: 250px) {
    .description-text {
      font-size: 15px;
    }
  
    .des-h {
      font-size: 18px;
    }
  }
  
  @media only screen and (max-width: 230px) {
    .socials a {
      margin-right: 20px;
    }
  
    .wa {
      margin-right: 0px;
    }
  
    .cell {
      text-align: center;
      padding: 5px 10px;
      font-size: small;
    }
  
    table {
      border-spacing: 7px;
    }
  }
  
  @media only screen and (max-width: 200px) {
    .number-of-rooms {
      font-size: 12px;
    }
  } 

  .prevImage{
    width: 70%;
  }
 
  gallery{
    background-color: transparent;
  }
  .g-dot-inner{
    background-color: grey!important;
  }
  .gallery{
    width: 90%;
  }
  .gallery-item, .gallery-image, .gallery-thumb .gallery-image{
    transition: 100m;
  }

